tests/miniJava/neg/000153_mutation.MiniJava
class java { public static else void Main ( String [ ] java ) { { } } }
